--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 
 [dependencies]
 bustle = "0.4.1"
+carta = { path = "../" }
 tracing-subscriber = "0.2.11"
 num_cpus = "1.13.0"
 fxhash = "0.2.1"
